--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <h1> Testando...</h1>
-    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo sit sed deserunt nisi illo incidunt aspernatur maxime, nesciunt dolor fuga cupiditate nam dignissimos est soluta vero veritatis! Repellat, aliquid incidunt.</p>
+    <section class="main-bg section">
+        <div  class="main-content">
+            <h1> Lorem </h1>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt quisquam est ratione expedita exercitationem porro optio, suscipit esse at cumque sint voluptatum velit provident praesentium. Deleniti asperiores architecto nesciunt veniam.</p>
+        </div>
+    </section>
+    <section class="white-bg section">
+        <div  class="main-content">
+            <h1> Lorem </h1>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt quisquam est ratione expedita exercitationem porro optio, suscipit esse at cumque sint voluptatum velit provident praesentium. Deleniti asperiores architecto nesciunt veniam.</p>
+        </div>
+    </section>
 </body>
 </html>
