--- a/index.html
+++ b/index.html
@@ -7,20 +7,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/variables.css">
+    <link rel="stylesheet" href="assets/css/elements.css">
+    <link rel="stylesheet" href="assets/css/classes.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+
 </head>
-<body>
-    <section class="main-bg section">
-        <div  class="main-content">
-            <h1> Lorem </h1>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt quisquam est ratione expedita exercitationem porro optio, suscipit esse at cumque sint voluptatum velit provident praesentium. Deleniti asperiores architecto nesciunt veniam.</p>
-        </div>
+<body class="main-bg">
+    <aside class="menu white-bg">
+        <section class="main-content menu-content">
+        <h1>
+            <a href="#">LOGO</a>
+        </h1>
+        <nav>
+            <ul>
+                <li><a href="#">intro</a></li>
+                <li><a href="#">top 3</a></li>
+                <li><a href="#">gallery</a></li>
+                <li><a href="#">work</a></li>
+                <li><a href="#">contact</a></li>
+
+            </ul>
+        </nav>
     </section>
-    <section class="white-bg section">
-        <div  class="main-content">
-            <h1> Lorem </h1>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt quisquam est ratione expedita exercitationem porro optio, suscipit esse at cumque sint voluptatum velit provident praesentium. Deleniti asperiores architecto nesciunt veniam.</p>
-        </div>
-    </section>
+    </aside>
+    <section class="section white-bg"> </section>
+    <section class="section"> </section>
+
 </body>
 </html>
