--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body class="main-bg">
     <aside class="menu white-bg">
-        <section class="main-content menu-content">
+        <div class="main-content menu-content">
         <h1>
             <a href="#">LOGO</a>
         </h1>
@@ -30,10 +30,24 @@
 
             </ul>
         </nav>
-    </section>
+    </div>
     </aside>
-    <section class="section white-bg"> </section>
-    <section class="section"> </section>
+    <div class="menu-spacing"></div>
+    <section class="intro main-bg section">
+        <div class="main-content intro-content">
+        <div class="intro-text-content">
+        <h2> Novas Fronteiras de Exploração</h2>
+        <p>Localizada no Norte do país, entre os estados do Amapá e Rio Grande do Norte, a Margem Equatorial apresenta um importante potencial petrolífero e conta com uma série de oportunidades para melhorar a vida de milhares de brasileiros. Existe a possibilidade de gerar empregos, aumentar a arrecadação e participar de um desenvolvimento regional e nacional.</p>
+        </div>
+        <div class="intro-img">
+            <img src="assets/img/javascript.svg" alt="três pessoas cada uma segurando um logo: CSS, HTML e JS">
+        </div>
+    </div>
+    </section>
+    <section class="white-bg section"> 
+
+    </section>
+
 
 </body>
 </html>
