--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     <aside class="menu white-bg">
         <div class="main-content menu-content">
         <h1>
-            <a href="#">LOGO</a>
+            <a href="#home">LOGO</a>
         </h1>
         <nav>
             <ul>
-                <li><a href="#">intro</a></li>
-                <li><a href="#">top 3</a></li>
-                <li><a href="#">gallery</a></li>
-                <li><a href="#">work</a></li>
+                <li><a href="#intro">intro</a></li>
+                <li><a href="#grid-one">grid-one</a></li>
+                <li><a href="#gallery">gallery</a></li>
                 <li><a href="#">contact</a></li>
 
             </ul>
@@ -33,7 +32,8 @@
     </div>
     </aside>
     <div class="menu-spacing"></div>
-    <section class="intro main-bg section">
+
+    <section id="home" class="intro main-bg section">
         <div class="main-content intro-content">
         <div class="intro-text-content">
         <h2> Novas Fronteiras de Exploração</h2>
@@ -43,11 +43,40 @@
             <img src="assets/img/javascript.svg" alt="três pessoas cada uma segurando um logo: CSS, HTML e JS">
         </div>
     </div>
-    </section>
-    <section class="white-bg section"> 
 
     </section>
+    <section id="intro" class="white-bg section">
+        <div class="main-content top3-content">
+            <h2>Tipos de produção de petróleo</h2>
+            <p>Na indústria de petróleo e gás, uma das variáveis importantes é a natureza e densidade do hidrocarboneto, um dos aspectos mais importantes para determinar seu valor. Isso ocorre especialmente para o petróleo, pois o seu aproveitamento na conversão para derivados mais valiosos aumenta conforme a densidade do óleo original e dos métodos utilizados nas refinarias.</p>
+            <p>Dependendo da densidade inicial do óleo cru, se ele é leve ou pesado (Figura 1), as frações de cada tipo de derivado serão produzidas em maior ou menor quantidade, sendo que o óleo pesado produz mais derivados de alto ponto de ebulição como asfalto e óleo combustível enquanto o óleo leve produz mais querosene e gasolina, por exemplo. No mercado global, os derivados mais leves são mais valiosos que os pesados. Os produtos mais valiosos, derivados mais leves, passam por outros processos como o craqueamento e alquilação catalítica, que transformam frações mais pesadas em frações mais leves. Na figura 1 ao lado ilustramos as classificações sobre a qualidade e densidade do petróleo bruto.</p>
+            <p>De acordo com o Instituto de Petróleo Americano (American Petroleum Institute -API), o padrão de densidade mais aceito mundialmente desde a década de 1920, o petróleo é classificado conforme sua densidade relativa à densidade da água, com a seguinte fórmula: °API=(141,5 + densidade da amostra) - 131,5</p>
+        </div>
+    </section>
 
+    <section id="grid-one" class="grid-one main-bg section">
+        <div class=" main-content grid-one-content">
+        <h2 class="grid-main-heading"> Fases da produção de petróleo e gás </h2>
+        <p class= "grid-description">Uma breve descrição</p>
+        <div class="grid">
+        <article>
+            <h3>Refino do petróleo </h3>
+        <p>O refino é a atividade mais complexa e determinante na escolha da finalidade, consistindo em um conjunto de processos que visam à transformação do óleo cru em derivados de valor comercial. Nas refinarias, o petróleo é aquecido e enviado à torre de destilação atmosférica, também conhecida como destilação fracionada, onde são separados os derivados conforme seus pontos de ebulição, com as frações mais pesadas destiladas na parte inferior e as mais leves na parte superior.</p>
+        </article>
+        <article>
+            <h3>Refino do gás natural</h3>
+        <p>O gás natural, por outro lado, é refinado nas chamadas Unidades de Processamento de Gás Natural (UPGN). Nessa instalação, se realiza a separação das frações pesadas (propano e mais pesados) das composições mais leves, como o metano e etano. No processamento, o gás natural úmido (gás rico) é transformado em: i) o gás seco, que contém principalmente metano e etano; II) o Líquido de Gás Natural (LGN), que contém propano e butano, que formam o Gás Liquefeito de Petróleo (GLP); e iii) a gasolina natural (CS+).</p>
+        </article>
+    </div>
+    </div>            
+    </section>
+
+    <section id="gallery" class="section white-bg">
+        <div class="main-content">
+            <h1>teste</h1>
+        </div>
+
+    </section>
 
 </body>
 </html>
